Bug 1234778 - Mark all audio frames as keyframes. r=kentuckyfriedtakahe, a=sylvestre